5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1834_2602.log
== TEST (2019-06-25 16:06:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])

consumo = array([[2200], [650], [1800] ])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:08:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])

consumo = array([[2200], [650], [1800] ])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:09:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])

consumo = array([[2200], [650], [1800]])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:10:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:10:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- EXECUTION TIME:
1.15868
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:11:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:11:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- EXECUTION TIME:
1.17904
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:12:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- EXECUTION TIME:
0.983911
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:12:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:14:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input[[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]]))

consumo = array(eval(input[2200, 650, 1800]))
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:15:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(input[[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])

consumo = array(input[2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:15:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:15:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- EXECUTION TIME:
1.07932
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:16:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input[[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]]))

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:17:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input[[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]]))

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:18:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(input[[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:18:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input[[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]]))

consumo = array(input[2200, 650, 1800]))
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
File "XXXX", line 6
    consumo = array(input[2200, 650, 1800]))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:18:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input[[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]]))

consumo = array(input[2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:19:16) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])))

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:19:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])))

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- EXECUTION TIME:
1.17241
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 9, in <module>
    alimento = dot(inv(quantidade),consumo)
  File "/usr/local/lib/python3.4/dist-packages/numpy/linalg/linalg.py", line 545, in inv
    _assertRankAtLeast2(a)
  File "/usr/local/lib/python3.4/dist-packages/numpy/linalg/linalg.py", line 207, in _assertRankAtLeast2
    'at least two-dimensional' % a.ndim)
numpy.linalg.LinAlgError: 1-dimensional array given. Array must be at least two-dimensional

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:19:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])))

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:20:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(input([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]]))
consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:20:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])))

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:20:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])))

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- EXECUTION TIME:
1.24811
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 9, in <module>
    alimento = dot(inv(quantidade),consumo)
  File "/usr/local/lib/python3.4/dist-packages/numpy/linalg/linalg.py", line 545, in inv
    _assertRankAtLeast2(a)
  File "/usr/local/lib/python3.4/dist-packages/numpy/linalg/linalg.py", line 207, in _assertRankAtLeast2
    'at least two-dimensional' % a.ndim)
numpy.linalg.LinAlgError: 1-dimensional array given. Array must be at least two-dimensional

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:20:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input([[ 2, 1, 4 ], [1, 2, 0], [ 2, 3 , 2 ]])))

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:22:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input("mg do alimento A,B,C:")))

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:22:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input("mg do alimento A,B,C:")))

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- EXECUTION TIME:
1.23591
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 9, in <module>
    alimento = dot(inv(quantidade),consumo)
  File "/usr/local/lib/python3.4/dist-packages/numpy/linalg/linalg.py", line 545, in inv
    _assertRankAtLeast2(a)
  File "/usr/local/lib/python3.4/dist-packages/numpy/linalg/linalg.py", line 207, in _assertRankAtLeast2
    'at least two-dimensional' % a.ndim)
numpy.linalg.LinAlgError: 1-dimensional array given. Array must be at least two-dimensional

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:22:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input("mg do alimento A,B,C:")))

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:23:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input("mg do alimento A,B,C:")))

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:23:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input("mg do alimento A,B,C:")))

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:24:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input("mg do alimento A,B,C:")))

consumo = array([2200, 650, 1800])
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- EXECUTION TIME:
1.0623
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 9, in <module>
    alimento = dot(inv(quantidade),consumo)
  File "/usr/local/lib/python3.4/dist-packages/numpy/linalg/linalg.py", line 545, in inv
    _assertRankAtLeast2(a)
  File "/usr/local/lib/python3.4/dist-packages/numpy/linalg/linalg.py", line 207, in _assertRankAtLeast2
    'at least two-dimensional' % a.ndim)
numpy.linalg.LinAlgError: 1-dimensional array given. Array must be at least two-dimensional

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:28:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input("mg do alimento A,B,C:")))

consumo = array(eval(input("X,Y,Z:")))
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:29:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input("mg do alimento A,B,C:")))

consumo = array(eval(input("X,Y,Z:")))
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- EXECUTION TIME:
0.865734
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 6, in <module>
    consumo = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:29:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input("mg do alimento A,B,C:")))

consumo = array(eval(input("X,Y,Z:")))
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:29:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input("mg do alimento A,B,C:")))

consumo = array(eval(input("X,Y,Z:")))
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:29:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input("mg do alimento A,B,C:")))

consumo = array(eval(input("X,Y,Z:")))
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- EXECUTION TIME:
0.956464
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 6, in <module>
    consumo = array(eval(input("X,Y,Z:")))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:30:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input("mg do alimento A,B,C:")))

consumo = array(eval(input("X,Y,Z:")))
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:31:59) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input("mg do alimento A,B,C:")))

consumo = array(eval(input("X,Y,Z:")))
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:32:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input([[2,1,4],[1,2,0],[2,3,2]])))

consumo = array(eval(input("X,Y,Z:")))
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:33:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array(eval(input([[2,1,4],[1,2,0],[2,3,2]])))

consumo = array(eval(input("X,Y,Z:")))
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:33:16) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array([[2,1,4],[1,2,0],[2,3,2]])

consumo = array(eval(input("X,Y,Z:")))
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:33:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array([[2,1,4],[1,2,0],[2,3,2]])

consumo = array(eval(input("X,Y,Z:")))
consumo = consumo.T

alimento = dot(inv(quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- EXECUTION TIME:
0.940516
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 13:21:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array([[2,1,4],[1,2,0],[2,3,2]])

consumo = array(eval(input("X,Y,Z:")))
consumo = consumo.T

alimento = solve((quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 13:21:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

quantidade = array([[2,1,4],[1,2,0],[2,3,2]])

consumo = array(eval(input("X,Y,Z:")))
consumo = consumo.T

alimento = solve((quantidade),consumo)

print("estafilococo: ", round(alimento[0], 1))
print("salmonela: ", round(alimento[1], 1))
print("coli: ", round(alimento[2], 1))

if alimento[0] == min(alimento):
    print("estafilococo")
elif alimento[1] == min(alimento):
    print("salmonela")
else:
    print("coli")


-- EXECUTION TIME:
1.20459
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
